<resources>
    <string name="app_name">सुनौलो हजार दिन</string>
    <string name="dahl">दाल</string>
    <string name="momo">मो : मो</string>
    <string name="fried_chicken">भुटेको कुखुराको मासु</string>
    <string name="pumpking_pudding">फर्सीको खिर बनाउने तरिका</string>
    <string name="newari">नेवारी खाना</string>
    <string name="ingredients">नसामग्री</string>
    <string name="steps">चरणहरू</string>
    <string name="step1">Heat 1 tbsp sesame oil in a wide-based pan with a tight-fitting lid.</string>
    <string name="step2">Add 1 finely chopped red onion and cook over a low heat for 10 mins, stirring occasionally, until softened.</string>
    <string name="pregnant">गर्भवती</string>
    <string name="zero_to_six_months">०-६ महिना</string>
    <string name="six_to_nine_months">६-९ महिना</string>
    <string name="nine_to_twelve_months">९-१२ महिना</string>
    <string name="twelve_to_twenty_four_months">१२-२४ महिना</string>
    <string name="healthy_foods">स्वास्थ खाना</string>
    <string name="unhealthy_foods">अस्वास्थ खाना</string>
    <string name="quiz">हाजिरी जवाफ</string>
    <string name="question">यो मध्य कुन खाना स्वास्थ छ?</string>
    <string name="recipes">पकाउने समाग्री र तरीका</string>
    <string name="health_info">स्वास्थ्य जानकारी</string>
    <string name="nutrition_info">पोषण जानकारी</string>
    <string name="general_information">सामान्य जानकारी</string>
    <string name="ingredients_headline">Ingredients</string>
    <string name="steps_headline">Steps</string>
    <string name="yes">हो</string>
    <string name="no">छैन</string>
    <string name="next_question">अर्को प्रश्न</string>
    <string name="correct">सहि</string>
    <string name="wrong">गलत</string>
    <string name="zeroToSix1">बच्चा जन्मेको २४ घण्टा मा तेस्रो दिनमा र ४ महिनामा स्वास्थ संस्था मा गई जाँच गराउनु पर्छ।</string>
    <string name="zeroToSix2">नवजात शिशु जन्मिएपछि सकेसम्म चाँडो ( १ घण्टा भित्र) आमाको पहिलो पहेंलो ( बिगौती ) दूध खुवाउनुपर्छ।</string>
    <string name="strengthening_food">शरीर निर्माण खाना (शक्ति)</string>
    <string name="strengthening_food_description">१. शरीरको वृद्धि र विकासमा मद्दत गर्छ।\n२. शरीरका सबै तन्तुहरूको वृद्धि र मरम्मतको लागि आवश्यक छ।\n३. घाउ निको हुन्छ ।\n४. रोगसँग लड्न प्रतिरोधात्मक क्षमता बढाउनुहोस्।</string>
    <string name="protective_food">सुरक्षात्मक खाना</string>
    <string name="protective_food_description">१. रोगसँग लड्न प्रतिरोधात्मक क्षमता बढाउनुहोस्।\n२. हरियो र पहेंलो खानाले आँखा स्वस्थ राख्न मद्दत गर्छ, छाला नरम हुन्छ र आन्द्रा स्वस्थ रहन्छ\n३. फाइबरयुक्त तरकारीले पेट सफा गर्न मद्दत गर्छ ।\n४. खाना पचाउन मद्दत गर्छ।</string>
    <string name="energy_food">ऊर्जा दिने खाना</string>
    <string name="energy_food_description">१. ऊर्जा प्रदान गर्दछ।\n२. शरीरमा न्यानोपन प्रदान गर्दछ र शरीरको तापक्रम कायम राख्छ।\n३. मुख र जिब्रोमा सूजन, मांसपेशी दुखाइ, छाला सुख्खा, कब्जियत, आदि जस्ता रोगहरू रोकथाम  रोक्नुहोस्।\n४. दीर्घकालीन कमीले मुटुको समस्या निम्त्याउन सक्छ।</string>

    <!-- Strings for questions -->
    <string name="healthy_question">Is this healthy?</string>
    <string name="chips_question">Is it healthy for your child to eat chips</string>
    <string name="water_question">Does a 3 month old baby need water?</string>
    <string name="strength_question">Does this belong in the strength food group?</string>
    <string name="energy_question">Does this belong in the energy food group?</string>
    <string name="protective_question">Does this belong in the protection food group?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for recipes dummy data -->
    <string name="nutritious_flower">सर्वोत्तम  पिठो बनाउने तरिका</string>
    <string name="jaulo">जाउलो</string>

    <!-- Dummy data for health info -->
    <string name="healt_info_generel_1">राष्ट्रिय खोप तालिका
    भ्याक्सिन                      उमेर
    १ . वि. सि. जी           जन्मने बित्तिकै
    २. रोटा      ६ हप्तामा पोलियो यफ़. आई. पी. भी  पी सि भी  डी पी टी, हेप बी हिन
    ३. रोटा                     १० हप्तामा पोलियो
    पी सि भी
    डि पी टी
    हेप बी हिव
    ४ . पोलियो ( तेस्रो मात्रा)         १४ हप्ता यफ् . आई पी भी ( दोस्रो मात्रा ) डि पी टी, हेप बी हीब ( तेस्रो मात्रा)
    ५. पी सि भी ( तेस्रो मात्रा)        ९ महिनामा
    दादुरा रुबेला ( पहिलो मात्रा)
    ६ . जापानी इन्सेफलाइटस    १२ महिनामा
    ७ . दादुरा रूबेला ( दोस्रो मात्रा)   १५                   महिनामा</string>
    <string name="healt_info_generel_2">वृद्धि अनुगमन
शिशु जन्मिँदा काे तौल ६ महिना मा दोब्बर र १ वर्ष मा लगभग तेब्बर बढ्नु पर्दछ ।
बालबालिकाको तौल र पाखुराको नाप
(MUAC) लिई बच्चाको दुब्लोपन वा खियौतेपन स्थिति थाहा पाउन सकिन्छ ।
यदि सारै दुब्लो वा खियौटे भएमा बढि रोग लाग्ने वा मृत्यु समेत हुन सक्छ।
 सारै दुब्लो वा ख्याउटे भएमा बालबालिकालाई समयमै स्वस्थ संस्था मा प्रेसर गर्नु पर्दछ।
</string>
    <string name="healt_info_generel_3">महत्पूर्ण भिटामिनहरू
विटामिन ए
भिटामीन ए  एक अति मह्त्वपूर्ण सूक्ष्म पोषण हो। जसले आँखा स्वस्थ राख्न , शरीर को सामान्य वृद्धि र विकास गर्न र संक्रामक रोग आदिबाट बच्न मद्धत गर्दछ।
# भिटामीन ए पाइने मुख्य खानेकुराहरू
हरियो सागपात : कर्कलो , रायो , पालुङ्गो , चम्सुर , मुलाको पात , फर्सीको मुन्टा , तोरी , लट्टे , बेथे, पोई साग आदि
पहेला फलफूल र तरकारीहरू : पाकेको आँप , मेवा , गाजर , पाकेको फर्सी , हलुवावेद आदि
जंगल बाट र पानीको वरिपरि पाइने : निउरो , सिस्नु , अल्दो, सिम्रायो जलुको आदि ।
जनावरी खानेकुरा : कलेजो , अण्डा , सानो माछा , दूध आदि ।
</string>
    <string name="pregnant_1">कम्तीमा ४ पटक ( ४,६,८,९ महिना ) स्वास्थ संस्थामा गएर नियमित स्वास्थ जाँच गराउनुपर्दछ र टी टी खोप लगाउनुपर्दछ। </string>
    <string name="pregnant_2">गर्भवती भएको ३ महिना पुरा भए पछि स्वास्थ संस्थामा गई जुकाको औषधि खानु पर्दछ।</string>
    <string name="pregnant_3">हरेक दिन कम्तीमा चार प्रकारका खानेकुराहरू ( अन्न तथा कन्दमूल, गेडागुडी , सागपात तथा पशुपन्छी जन्य श्रोत जस्तै ( दूध, अण्डा , माछा , मासु ) समेटिने गरी खानुपर्छ।</string>
    <string name="pregnant_4">गर्भवती भएको ३ महिना पुरा भए देखि सुत्केरी भएको ४५ दिनसम्म एक पटक १ चक्की आइरन चक्की खानु पर्दछ।</string>
    <string name="pregnant_5">पर्याप्त आराम गर्नु पर्छ । धेरै कडा परिश्रम पर्ने काम गर्नु हुँदैन , गर्हो समान उचाल्नु हुँदैन र कामको बीच बीचमा आराम गर्नु पर्दछ।</string>
    <string name="zero_to_six_1">बच्चा जन्मेको २४ घण्टा मा तेस्रो दिनमा र ४ महिनामा स्वास्थ संस्था मा गई जाँच गराउनु पर्छ।</string>
    <string name="zero_to_six_2">जन्मिए देखि ६ महिना सम्म शिशु लाई आमाको दुध मात्र हुने हुँदा पानी पनि खुवाउनु पर्दैन।</string>
    <string name="zero_to_six_3">जन्मने बित्तिकै स्तनपान सुरु गराउने ले दूध लगातार आइरहन मद्दत गर्दछ।</string>
    <string name="zero_to_six_4">नवजात शिशुलाई दिन र रातमा गरी कम्तीमा पनि १० दिन १२ पटक सम्म आमाको दुध मात्र खुवाउनुपर्छ</string>
    <string name="zero_to_six_5">एउटा स्तनपान बाट निख्रिने गरी खुवाइए पछि मात्र अर्को स्तनपान बाट खुवाउने।</string>
    <string name="zero_to_six_6">बच्चा ६ महिना काे उमेर पुग्नासाथ र प्रतेक ६-६ महिनामा थप अतिरिक्त भिटामिन ए क्याप्सुल र जुकाको औषधी खुवाउने।</string>
    <string name="six_to_nine_1">बच्चा ६ महिना र ९ महिना पुगे पछी स्वास्थ संस्थामा गई जाँच गराउने । </string>
    <string name="six_to_nine_2">६ महिना पुरा (१८० दिन ) भएपछि फरक खानाका साथै आमाको दूध दुई वर्ष पूरा नभए सम्म खुवाउनु पर्छ। </string>
    <string name="six_to_nine_3">फरक खाना दैनिक कम्तीमा ४ समूहको खाना मिसाएर बनाउनुपर्छ ( अन्न, गेडागुडी , पशुपन्छी जन्य खानेकुराहरू , फलफूलहरू तथा तरकारीहरू ) । </string>
    <string name="six_to_nine_4">पानी सधैं सफा वा उमालेर मात्र प्रयोग गर्नु पर्छ। खाना बनाउनु अघि र खुवाउनु पछि राम्रो सँग साबुन पानीले हात धुने।</string>
    <string name="six_to_nine_5">खाना तयार गर्दा दुई बालबालिकाको चिन्न भएको नुनको मात्र प्रयोग गर्नु पर्छ।</string>
    <string name="nine_to_twelve_1">बालबालिकालाई स्तनपान को साथ साथै दिनमा ३ पटक ( २ पटक खाना र एक पटक जाउलो ) एक चिया गलास् (१२५ एम एल ) फरक खाना र १ पटक खाजा खुवाउने । खाजा मा फलफुल समावेश गर्न सकिन्छ।</string>
    <string name="nine_to_twelve_2">सफा र सुरक्षित पानीको प्रयोग गर्नु पर्छ।</string>
    <string name="nine_to_twelve_3">सरसफाइमा ( काम गर्ने वरिपरि भुइँहरु , भाँडाकुँडा हरु , हातहरू ) विशेष ध्यान दिनु पर्छ।</string>
    <string name="nine_to_twelve_4">बजारमा पाइने कम पोषिला खानेकुरा खान निरुत्साहित गर्ने।</string>
    <string name="twelve_to_twentyfour_1">स्तनपानको साथ साथै दिनमा ३ पटक ( ३ पटक नै खाना) दुई चम्चा गलास ( २५० एम एल ) बराबरको पुरक खाना र २ पटक खाजा खुवाउनु पर्छ।</string>
    <string name="twelve_to_twentyfour_2">हरेक बार खाना चार समावेश गर्नु पर्दछ।</string>
    <string name="twelve_to_twentyfour_3">खाजा मा फलफूल , अण्डा समावेश गर्ने ।</string>
    <string name="twelve_to_twentyfour_4">घरमै पाकेको ताजा राम्रो सँग पकाएको खाना ( विशेष गरी मासु , अण्डा र माछा ) खुवाउन प्रोत्साहन गर्नु पर्दछ।</string>

</resources>

