<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_image"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/dahl" />

                    <TextView
                        android:id="@+id/item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/dahl"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp"
                        tools:text="Dahl" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_image1"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/momo" />

                    <TextView
                        android:id="@+id/item_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/momo"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp"
                        tools:text="Momo" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_image2"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/newarithali" />

                    <TextView
                        android:id="@+id/item_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/newari"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp"
                        tools:text="Newari Tali" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_image3"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/fried_chicken" />

                    <TextView
                        android:id="@+id/item_title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/fried_chicken"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30sp"
                        tools:text="Fried Chicken" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>